# GoIT-Python-Developer-course

./: sort media files.py
Python core block/homework-08/: birthday_reminder.py
Python core block/homework-09/: user_data_console_bot.py
Python core block/homework-10/python-core-homework-10/: check_homework.py  main.py
Python core block/homework-11/: user_data_console_bot_CLASS.py
Web block/homework-01/clib/: classes.py  main.py
Web block/homework-02/CLIB/: Dockerfile  (+1 more)
Web block/homework-03/: factorize_proceses.py
Web block/homework-04/: Dockerfile  main.py  pyproject.toml
Web block/homework-05/: main.py
Web block/homework-06/: connection_to_DB.py  create_db.sql  create_tables.py  fill_DB.py  homework_DB.db  query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_11.sql  query_12.sql
Web block/homework-07/: Seed_with_CLI.py  config.ini  my_select.py  pyproject.toml  seed.py
Web block/homework-07/migrations/versions/: 8107830d1ab5_init.py
Web block/homework-07/src/: db.py  models.py
Web block/homework-08/Web_homework_08_01/: ask_script.py  models.py  pyproject.toml  seed.py
Web block/homework-08/Web_homework_08_02/: consumer.py  consumer_email.py  consumer_sms.py  models.py  producer.py  producer_SMS_Email.py  pyproject.toml
Web block/homework-09/: authors.json  config.ini  main.py  models.py  pyproject.toml  seed.py
Web block/homework-10/DjangoHomeWork/: README.md  pyproject.toml
Web block/homework-10/DjangoHomeWork/hw_project/: db.sqlite3
Web block/homework-10/DjangoHomeWork/hw_project/hw_project/: settings.py
Web block/homework-12/FastAPI_RestAPI_AUTH_HomeWork/: README.md  main.py  pyproject.toml
Web block/homework-12/FastAPI_RestAPI_AUTH_HomeWork/migrations/versions/: 79e55351145b_init.py  eeb78fec60db_add_user_and_role_tables.py
Web block/homework-12/FastAPI_RestAPI_AUTH_HomeWork/src/entity/: models.py
Web block/homework-12/FastAPI_RestAPI_AUTH_HomeWork/src/repository/: contact.py  users.py
Web block/homework-12/FastAPI_RestAPI_AUTH_HomeWork/src/routes/: auth.py  contact.py
Web block/homework-12/FastAPI_RestAPI_AUTH_HomeWork/src/schemas/: user.py
Web block/homework-12/FastAPI_RestAPI_AUTH_HomeWork/src/services/: auth.py
Web block/homework-13/FastAPI_Django_ENV_Cloudinary/: .gitignore  README.md  main.py  pyproject.toml
Web block/homework-13/FastAPI_Django_ENV_Cloudinary/src/conf/: config.py
Web block/homework-13/FastAPI_Django_ENV_Cloudinary/src/database/: db.py
Web block/homework-13/FastAPI_Django_ENV_Cloudinary/src/entity/: models.py
Web block/homework-13/FastAPI_Django_ENV_Cloudinary/src/repository/: users.py
Web block/homework-13/FastAPI_Django_ENV_Cloudinary/src/routes/: auth.py  contact.py  users.py
Web block/homework-13/FastAPI_Django_ENV_Cloudinary/src/schemas/: contact.py
Web block/homework-13/FastAPI_Django_ENV_Cloudinary/src/services/: auth.py  email.py
Web block/homework-13/Jango Reset password Env/: README.md  pyproject.toml
Web block/homework-13/Jango Reset password Env/hw_project/hw_project/: settings.py  urls.py
Web block/homework-13/Jango Reset password Env/hw_project/quotes/: utils.py  views.py
Web block/homework-13/Jango Reset password Env/hw_project/quotes/migrations/: 0001_initial.py
Web block/homework-13/Jango Reset password Env/hw_project/quotes/templates/quotes/: base.html
Web block/homework-13/Jango Reset password Env/hw_project/users/: urls.py  views.py
Web block/homework-13/Jango Reset password Env/hw_project/users/migrations/: 0001_initial.py
Web block/homework-13/Jango Reset password Env/hw_project/utils/: add_quotes_to_mongo.py  migration.py
Web block/homework-14/: .gitignore  docker-compose.yml  env.example  main.py  pyproject.toml
homework-07/clean_folder/: setup.py
homework-08/: birthday_reminder.py
homework-10/python-core-homework-10/: main.py
homework-11/: user_data_console_bot_CLASS.py
homework-12/: user_data_console_bot_CLASS_Save.py
homework-13/: sort media files.py
(+38 files in other folders)
