[tool.poetry]
name = "web-homework-07"
version = "0.1.0"
description = ""
authors = ["Kostiantyn78 <ksgorishniy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.24"
psycopg2 = "^2.9.9"
faker = "^22.0.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
