[tool.poetry]
name = "web-homework-09"
version = "0.1.0"
description = ""
authors = ["Kostiantyn78 <ksgorishniy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bson = "^0.5.10"
mongoengine = "^0.27.0"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
