[tool.poetry]
name = "web-homework-08-02"
version = "0.1.0"
description = ""
authors = ["Kostiantyn78 <ksgorishniy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
faker = "^22.2.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
