[tool.poetry]
name = "jango reset password env"
version = "0.1.0"
description = ""
authors = ["Kostiantyn78 <ksgorishniy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
bson = "^0.5.10"
pymongo = "^4.6.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
